# humblelegend-ai

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  auto-test.py  check_deploy.py  check_server.py  deploy.bat  docker-compose.yml  english-test.ps1  main.py  pyproject.toml  render.yaml  requirements.txt  run_fastapi_server.ps1  run_server_test.py  run_server_with_error_capture.ps1  send-request.py  server_start.py  setup.py  show-results.ps1  simple-test.ps1  simple_http_server.py  simple_humblelegend.py  simple_run_test.py  simple_start.py  simple_test.py  start.ps1  start_api.bat  start_server.bat  start_server_simple.ps1  start_with_uvicorn.py  test-chinese-commands.py  test-powershell.ps1  启动服务器.bat
.github_backup/workflows/: deploy.yml
src/: dotenv.py  loguru.py
src/agents/: __init__.py  command_agent.py  daily_report_agent.py  record_agent.py  review_agent.py  setting_agent.py
src/api/: __init__.py  server.py  simple_server.py
src/core/: __init__.py  app.py  database.py  db_utils.py  init_db.py  models.py  simple_app.py  simple_database.py
src/humblelegend/: __init__.py  __main__.py
src/humblelegend/agents/: __init__.py  calorie.py  collect.py  daily_report.py  memory.py  orchestrator.py  parser.py  polish.py  record.py  review.py  settings.py
src/humblelegend/api/: __init__.py  routes.py
src/humblelegend/config/: __init__.py  templates.py
src/humblelegend/core/: __init__.py  config.py  (+3 more)
src/pydantic/: __init__.py
src/utils/: __init__.py  chart_generator.py  document_exporter.py  image_recognition.py  nutrition_database.py
(+4 files in other folders)
